--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Recipe CRUD</title>
+    <base href="/" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,9 +22,9 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <base href="/" />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
-  <body style="background-color: aqua">
+  <body style="background-color: rgb(197, 201, 196)">
     <header ng-include="'header.html'"></header>
 
     <main class="container" ng-view=""></main>
